ros2_ws/log/build_2025-07-10_09-39-24/tribo_plot/stderr.log
  File "/home/kang/ros2_ws/install/tribo_plot/lib/python3.10/site-packages/tribo_plot/sensorT_fake.py", line 26
    def __name__ == '__main__':
                 ^^
SyntaxError: invalid syntax

